[project]
name = "lab8-workflows-avec-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-core>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "ipython>=8.0.0",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.0.0",
]
